Corrections from the first pull request done
Putting Logo in a tag

Main Section Background Resolved

Social Media Icon Moved to ul>li tag

Unwanted Margin Removed

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,54 +1,95 @@
-* {
-  font-family: 'Poppins', sans-serif;
-}
 
 /* Mobile View */
 @media all and (max-width: 375px) {
-  * {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-
-  #main-section {
-    background-image: url(../images/background.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 95%;
-    height: 588px;
-  }
-
-  header {
+   header {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 44px;
+    bottom: 0px;
     display: flex;
     justify-content: space-between;
+  }
+
+  #logo-placeholder {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 12px;
+    position: absolute;
+    width: 100px;
+    height: 40px;
+    left: 12px;
   }
 
   #logo {
     width: 76px;
     height: 20px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
     line-height: 20px;
-    padding-top: 58px;
-    padding-left: 24px;
     display: flex;
     align-items: center;
     text-align: center;
-    color: #6070ff;
+    text-decoration: none;
+    color: #6070FF;
     flex: none;
     order: 0;
     flex-grow: 0;
   }
 
+  nav {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 8px;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    right: 24px;
+    border-radius: 8px;
+  }
+
   #hamburger {
-    padding-top: 58px;
+    width: 24px;
+    height: 24px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  }
+
+  #header-section {
+    position: absolute;
+    width: 375px;
+    height: 587.15px;
+    left: 0;
+    right: 0;
+    top: 104px;
+    display: flex;
+    flex-direction: column;
+    background-image: url("../images/background.png");
+    background-size: 90% 100%;
+    background-repeat: no-repeat;
+    border-radius: 0 0 0 100px;
+  }
+
+  #header-section .container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 24px;
+    position: absolute;
+    width: 375px;
+    height: 604px;
+    left: calc(50% - 375px/2);
   }
 
   #profile-header h1 {
     width: 327px;
     height: 150px;
-    padding-top: 114px;
+    padding-top: 90px;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -63,9 +104,10 @@
   }
 
   #profile-description p {
+    position: absolute;
+    top: 276px;
     width: 327px;
     height: 146px;
-    padding-top: 12px;
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -78,6 +120,8 @@
   }
 
   #connect h3 {
+    position: absolute;
+    top: 434px;
     width: 100%;
     height: 24px;
     padding-top: 12px;
@@ -94,6 +138,11 @@
   }
 
   .social-media-icons {
+    position: absolute;
+    top: 475px;
     display: flex;
+    list-style: none;
+    gap: 15px;
+    left: 0;
   }
 }
